<resources>
    <string name="app_name">도산 라운지</string>
    <string name="ranking_view_title">랭킹</string>
    <string name="ranking_stats">내 랭킹 기록</string>
    <string name="personal_ranking">개인 랭킹</string>
    <string name="in_group_ranking">그룹 랭킹</string>
    <string name="my_badge">My Badge</string>
    <string name="rank" translatable="false">#</string>
    <string name="nick_name">닉네임</string>
    <string name="study_time">00:00:00</string>
    <string name="my_ranking">내 순위</string>
    <string name="profile">프로필 이미지</string>
    <string name="sign_up">회원가입</string>
    <string name="enter_name">성함을 입력해주세요</string>
    <string name="select_major">학과를 선택해주세요</string>
    <string name="enter_email">사용할 E-mail 을 입력해주세요</string>
    <string name="enter_password">사용할 Password 를 입력해주세요</string>
    <string name="doublecheck_password">Password 를 한 번 더 입력해주세요</string>
    <string name="name" translatable="false">Name</string>
    <string name="e_mail" translatable="false">E-mail</string>
    <string name="password" translatable="false">Password</string>
    <string name="password_alrt">Password 는 6자 이상이어야 합니다.</string>
    <string name="password_warning">Password가 일치하지 않습니다!</string>
    <string name="make_account">계정 생성</string>
    <string name="not_yet">아직 계정이 없으신가요?</string>
    <string name="or" translatable="false">OR</string>
    <string name="log_in">로그인</string>
    <string name="set_profile">프로필 설정</string>
    <string name="start">시작하기</string>
    <string name="group_name">그룹명</string>
    <string name="sit_reservation">자리 예약</string>
    <string name="rent">물품 대여</string>
    <string name="more">더보기</string>
    <string name="members">구성원</string>
    <string name="interview_room">취업 및 면접실</string>
    <string name="table">table</string>
    <string name="studyroom">스터디룸</string>
    <string name="self_study_space">자율학습공간</string>
    <string name="reserve">예약하기</string>
    <string name="select_seat">좌석 선택하기</string>
    <string name="return_seat">자리 반납</string>
    <string name="select_time">시간 선택하기</string>
    <string name="usage_notice">색깔별 예약 현황\n노랑 : 1팀 / 주황 : 2팀 / 빨강 : 3팀</string>
    <string name="this_week">이번주</string>
    <string name="next_week">다음주</string>
    <string name="nnext_week">다다음주</string>
    <string name="cancel_reserv">예약 및 이용 취소</string>
    <string name="now_using">명 이용중</string>
    <string name="ban">이용 불가</string>
    <string name="channel_name" translatable="false">채널 이름</string>
    <string name="channel_description" translatable="false">channel description </string>
</resources>