<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loading_background">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="120dp"
                android:layout_marginBottom="50dp"
                android:fontFamily="@font/aritaburilight"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/nameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/enter_name"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/nameInput"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:hint="@string/name"
                android:fontFamily="@font/aritaburilight"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:importantForAutofill="no"
                android:inputType="text" />

            <TextView
                android:id="@+id/selectMajorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="40dp"
                android:text="@string/select_major"
                android:textColor="@color/white" />

            <Spinner
                android:id="@+id/majorSpinner"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:layout_marginStart="44dp"
                android:spinnerMode="dialog"
                android:theme="@style/customDialog"/>

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="40dp"
                android:text="@string/enter_email"
                android:textColor="@color/white" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:hint="@string/e_mail"
                android:fontFamily="@font/aritaburilight"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="40dp"
                android:text="@string/enter_password"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/psswrd"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:hint="@string/password"
                android:fontFamily="@font/aritaburilight"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="18sp"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/password_alrt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/password_alrt"
                android:visibility="invisible"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="40dp"
                android:text="@string/doublecheck_password"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/doublecheck"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:hint="@string/password"
                android:fontFamily="@font/aritaburilight"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="18sp"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/doublecheckresult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/password_warning"
                android:textColor="#EE0000"
                android:visibility="invisible" />

            <android.widget.Button
                android:id="@+id/signup_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="120dp"
                android:background="@drawable/login_button_drawable"
                android:enabled="false"
                android:text="@string/make_account"
                android:fontFamily="@font/aritaburilight"
                android:textColor="@color/black" />

        </LinearLayout>
    </ScrollView>

    <!--백엔드 확인-->
</androidx.constraintlayout.widget.ConstraintLayout>