<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loading_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="120dp"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/aritaburilight"
            android:text="@string/set_profile"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/nameText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/enter_name"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/nameInput2"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/aritaburilight"
            android:hint="@string/name"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="18sp"
            android:importantForAutofill="no"
            android:inputType="text" />

        <TextView
            android:id="@+id/selectMajorText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="40dp"
            android:text="@string/select_major"
            android:textColor="@color/white" />

        <Spinner
            android:id="@+id/majorSpinner2"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginStart="44dp"
            android:spinnerMode="dialog"
            android:theme="@style/customDialog" />

        <android.widget.Button
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="120dp"
            android:background="@drawable/login_button_drawable"
            android:text="@string/start"
            android:textColor="@color/black" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>