<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loading_background">

    <EditText
        android:id="@+id/emailinput"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:hint="@string/e_mail"
        android:fontFamily="@font/aritaburilight"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/psswrdinput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        android:importantForAutofill="no"
        android:inputType="textWebEmailAddress" />

    <EditText
        android:id="@+id/psswrdinput"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginBottom="60dp"
        android:hint="@string/password"
        android:fontFamily="@font/aritaburilight"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        android:importantForAutofill="no" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="414dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/emailinput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/logo"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="8dp"
        android:text="@string/not_yet"
        android:fontFamily="@font/aritaburilight"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/createAccountButton"
        app:layout_constraintHorizontal_bias="0.685"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/psswrdinput" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/or"
        android:fontFamily="@font/aritaburilight"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/google_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent" />

    <android.widget.Button
        android:id="@+id/login"
        android:layout_width="350dp"
        android:layout_height="52dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/login_button_drawable"
        android:text="@string/log_in"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent" />

    <android.widget.Button
        android:id="@+id/createAccountButton"
        android:layout_width="101dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        android:background="#00FFFFFF"
        android:fontFamily="@font/aritaburilight"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/psswrdinput"
        tools:ignore="TouchTargetSizeCheck" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_button"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginBottom="112dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>