<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="15dp"
    android:background="@drawable/dorazy_main_blue_color"
    android:orientation="horizontal"
    android:paddingLeft="10dp"
    android:paddingTop="20dp"
    android:paddingRight="10dp"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/rank"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/rank"
        android:fontFamily="@font/aritaburilight"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/rankimage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        app:srcCompat="@drawable/profile"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/rankname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:gravity="start"
        android:text="@string/nick_name"
        android:fontFamily="@font/aritaburilight"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/ranktime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/study_time"
        android:fontFamily="@font/aritaburilight"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />
</LinearLayout>