<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dorazy_main_blue_color">


    <android.widget.Button
        android:id="@+id/PersonalRankingBackButton"
        android:layout_width="102dp"
        android:layout_height="72dp"
        android:background="#00FFFFFF"
        android:text="◀        "
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toStartOf="@+id/PersonalRankingViewTitleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/PersonalRankingViewTitleText"
        android:layout_width="187dp"
        android:layout_height="68dp"
        android:gravity="center"
        android:shadowColor="#40000000"
        android:shadowDx="0"
        android:shadowDy="7"
        android:shadowRadius="2"
        android:text="@string/personal_ranking"
        android:fontFamily="@font/aritaburihairline"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/PersonalRankingBackButton"
        app:layout_constraintEnd_toStartOf="@+id/NullSpaceText"
        app:layout_constraintStart_toEndOf="@+id/PersonalRankingBackButton"
        app:layout_constraintTop_toTopOf="@+id/PersonalRankingBackButton" />

    <TextView
        android:id="@+id/NullSpaceText"
        android:layout_width="105dp"
        android:layout_height="69dp"
        android:text=" "
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/PersonalRankingViewTitleText"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/main_white_drawable"
        android:orientation="vertical"
        android:paddingTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NullSpaceText">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/RankingList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>
        </ScrollView>

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:layout_marginBottom="3dp"
            android:text="@string/my_ranking"
            android:fontFamily="@font/aritaburilight"
            android:textColor="#000000"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dorazy_main_blue_color"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingTop="20dp"
            android:paddingRight="10dp"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/MyRanking"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/rank"
                android:fontFamily="@font/aritaburilight"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/Myimage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/profile"
                app:srcCompat="@drawable/profile" />

            <TextView
                android:id="@+id/MyName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:gravity="start"
                android:text="@string/nick_name"
                android:fontFamily="@font/aritaburilight"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/MyTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/study_time"
                android:fontFamily="@font/aritaburilight"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>